markers z-index fixed

--- a/static/less/main/components/marker-label.less
+++ b/static/less/main/components/marker-label.less
@@ -20,3 +20,7 @@
     font-size: 10px;
     .box-shadow(~"0 0 5px @{gray-light}")
 }
+
+.gmnoprint {
+    opacity: 1 !important;
+}
